; ModuleID = '/home/carl/AnghaBench/goaccess/src/extr_json.c_print_data_metrics.c'
source_filename = "/home/carl/AnghaBench/goaccess/src/extr_json.c_print_data_metrics.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i64 }
%struct.TYPE_5__ = type { i32, i32, %struct.TYPE_6__* }
%struct.TYPE_6__ = type { i32 }
%struct.GPanel_ = type { i32 (i32*, %struct.TYPE_6__*, i32, i32, i32)* }

@conf = common dso_local global %struct.TYPE_7__ zeroinitializer, align 8
@.str = private unnamed_addr constant [5 x i8] c"data\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, %struct.TYPE_5__*, i32, i32, %struct.GPanel_*)* @print_data_metrics to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @print_data_metrics(i32* %0, %struct.TYPE_5__* %1, i32 %2, i32 %3, %struct.GPanel_* %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca %struct.TYPE_5__*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca %struct.GPanel_*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store %struct.TYPE_5__* %1, %struct.TYPE_5__** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store %struct.GPanel_* %4, %struct.GPanel_** %10, align 8
  store i32 0, i32* %13, align 4
  store i32 0, i32* %14, align 4
  store i32 0, i32* %15, align 4
  %16 = load i64, i64* getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @conf, i32 0, i32 0), align 8
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %25

18:                                               ; preds = %5
  %19 = load i32, i32* %9, align 4
  %20 = add nsw i32 %19, 1
  store i32 %20, i32* %13, align 4
  %21 = load i32, i32* %9, align 4
  %22 = add nsw i32 %21, 2
  store i32 %22, i32* %14, align 4
  %23 = load i32, i32* %9, align 4
  %24 = add nsw i32 %23, 3
  store i32 %24, i32* %15, align 4
  br label %25

25:                                               ; preds = %18, %5
  %26 = load i32*, i32** %6, align 8
  %27 = load i32, i32* %13, align 4
  %28 = call i32 @popen_arr_attr(i32* %26, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 %27)
  store i32 0, i32* %12, align 4
  br label %29

29:                                               ; preds = %87, %25
  %30 = load i32, i32* %12, align 4
  %31 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %32 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %31, i32 0, i32 0
  %33 = load i32, i32* %32, align 8
  %34 = icmp slt i32 %30, %33
  br i1 %34, label %35, label %90

35:                                               ; preds = %29
  %36 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %37 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %36, i32 0, i32 2
  %38 = load %struct.TYPE_6__*, %struct.TYPE_6__** %37, align 8
  %39 = load i32, i32* %12, align 4
  %40 = sext i32 %39 to i64
  %41 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %38, i64 %40
  %42 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %41, i32 0, i32 0
  %43 = load i32, i32* %42, align 4
  %44 = load i32, i32* %8, align 4
  %45 = call i32 @set_data_metrics(i32 %43, i32** %11, i32 %44)
  %46 = load i32*, i32** %6, align 8
  %47 = load i32, i32* %14, align 4
  %48 = call i32 @popen_obj(i32* %46, i32 %47)
  %49 = load i32*, i32** %6, align 8
  %50 = load i32*, i32** %11, align 8
  %51 = load i32, i32* %15, align 4
  %52 = call i32 @print_json_block(i32* %49, i32* %50, i32 %51)
  %53 = load %struct.GPanel_*, %struct.GPanel_** %10, align 8
  %54 = getelementptr inbounds %struct.GPanel_, %struct.GPanel_* %53, i32 0, i32 0
  %55 = load i32 (i32*, %struct.TYPE_6__*, i32, i32, i32)*, i32 (i32*, %struct.TYPE_6__*, i32, i32, i32)** %54, align 8
  %56 = icmp ne i32 (i32*, %struct.TYPE_6__*, i32, i32, i32)* %55, null
  br i1 %56, label %57, label %74

57:                                               ; preds = %35
  %58 = load %struct.GPanel_*, %struct.GPanel_** %10, align 8
  %59 = getelementptr inbounds %struct.GPanel_, %struct.GPanel_* %58, i32 0, i32 0
  %60 = load i32 (i32*, %struct.TYPE_6__*, i32, i32, i32)*, i32 (i32*, %struct.TYPE_6__*, i32, i32, i32)** %59, align 8
  %61 = load i32*, i32** %6, align 8
  %62 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %63 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %62, i32 0, i32 2
  %64 = load %struct.TYPE_6__*, %struct.TYPE_6__** %63, align 8
  %65 = load i32, i32* %12, align 4
  %66 = sext i32 %65 to i64
  %67 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %64, i64 %66
  %68 = load i32, i32* %8, align 4
  %69 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %70 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %69, i32 0, i32 1
  %71 = load i32, i32* %70, align 4
  %72 = load i32, i32* %15, align 4
  %73 = call i32 %60(i32* %61, %struct.TYPE_6__* %67, i32 %68, i32 %71, i32 %72)
  br label %74

74:                                               ; preds = %57, %35
  %75 = load i32*, i32** %6, align 8
  %76 = load i32, i32* %14, align 4
  %77 = load i32, i32* %12, align 4
  %78 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %79 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %78, i32 0, i32 0
  %80 = load i32, i32* %79, align 8
  %81 = sub nsw i32 %80, 1
  %82 = icmp eq i32 %77, %81
  %83 = zext i1 %82 to i32
  %84 = call i32 @pclose_obj(i32* %75, i32 %76, i32 %83)
  %85 = load i32*, i32** %11, align 8
  %86 = call i32 @free(i32* %85)
  br label %87

87:                                               ; preds = %74
  %88 = load i32, i32* %12, align 4
  %89 = add nsw i32 %88, 1
  store i32 %89, i32* %12, align 4
  br label %29

90:                                               ; preds = %29
  %91 = load i32*, i32** %6, align 8
  %92 = load i32, i32* %13, align 4
  %93 = call i32 @pclose_arr(i32* %91, i32 %92, i32 1)
  ret void
}

declare dso_local i32 @popen_arr_attr(i32*, i8*, i32) #1

declare dso_local i32 @set_data_metrics(i32, i32**, i32) #1

declare dso_local i32 @popen_obj(i32*, i32) #1

declare dso_local i32 @print_json_block(i32*, i32*, i32) #1

declare dso_local i32 @pclose_obj(i32*, i32, i32) #1

declare dso_local i32 @free(i32*) #1

declare dso_local i32 @pclose_arr(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
